--- a/kadai_ideta_0328/css/style.css
+++ b/kadai_ideta_0328/css/style.css
@@ -86,11 +86,11 @@ body {
   justify-content: space-between;
 }
 
-.about_img {
+.pc_about_img {
   max-width: 50%;
 }
 
-.about_img img {
+.pc_about_img img {
   border-radius: 0 0 82px 0;
 }
 
@@ -103,12 +103,12 @@ body {
   margin: 56px auto 49px 0;
 }
 
-.about_content p:nth-child(2) {
+.about_content p:nth-of-type(1) {
   font-size: 44px;
   line-height: 1.3;
 }
 
-.about_content p:nth-child(3) {
+.about_content p:nth-of-type(2) {
   font-size: 16px;
   line-height: 1.6;
   text-align: justify;
@@ -117,11 +117,15 @@ body {
 
 /* メニュー */
 
+#menu {
+  padding: 0px 10px;
+}
+
 #menu h2 {
   margin: 96px auto 39px;
 }
 
-.mennu_items {
+.menu_items {
   display: flex;
   justify-content: space-between;
 }
@@ -131,7 +135,7 @@ body {
   position: relative;
 }
 
-.menu_img img {
+.pc_menu_img img {
   border-radius: 0 41px 0 0;
 }
 
@@ -155,7 +159,7 @@ h3 {
   margin: 37px auto 15px;
 }
 
-.gallery_items {
+.pc_gallery_items {
   display: flex;
 }
 
@@ -171,7 +175,7 @@ h3 {
   background: #fff;
 }
 
-table {
+.pc_table {
   margin: 45px auto;
 }
 
@@ -179,7 +183,7 @@ table {
   padding-right: 56px;
 }
 
-td {
+.pc_table td {
   line-height: 2;
 }
 
@@ -234,4 +238,301 @@ footer p {
 
 .return img {
   width: 125px;
+}
+
+/* スマホ版メニュー */
+
+.sp_nav,
+.sp_btn,
+.sp_about_img,
+.sp_menu_img,
+.sp_gallery_items,
+.sp_table {
+  display: none;
+}
+
+@media screen and (max-width: 1100px) {
+  .header_content p:nth-child(2) {
+    font-size: 78px;
+  }
+
+  .about_content p:nth-child(2) {
+    font-size: 38px;
+  }
+
+  .pc_nav {
+    display: none;
+  }
+
+  .sp_btn {
+    display: block;
+    height: 23px;
+    cursor: pointer;
+    position: absolute;
+    top: 20px;
+    right: 25px;
+    z-index: 2;
+  }
+
+  .sp_btn span {
+    display: block;
+    width: 33px;
+    height: 3px;
+    border-radius: 2px;
+    background: #fff;
+    position: relative;
+    top: 10px;
+    transition: 0.3s;
+  }
+
+  .sp_btn span::before,
+  .sp_btn span::after {
+    content: "";
+    display: block;
+    width: 33px;
+    height: 3px;
+    border-radius: 2px;
+    background: #fff;
+    position: absolute;
+    transition: 0.3s;
+  }
+
+  .sp_btn span::before {
+    bottom: 10px;
+  }
+
+  .sp_btn span::after {
+    top: 10px;
+  }
+
+  .sp_btn.open span {
+    background: transparent;
+  }
+
+  .sp_btn.open span::before {
+    bottom: 0;
+    transform: rotate(45deg);
+  }
+  .sp_btn.open span::after {
+    top: 0;
+    transform: rotate(135deg);
+  }
+
+  /* spメニューの見た目 */
+  .sp_nav {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.8);
+    z-index: 1;
+  }
+  .sp_nav ul {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+  }
+  .sp_nav ul li {
+    padding: 20px;
+    color: #fff;
+    font-size: 18px;
+    font-family: "游ゴシック体", YuGothic, "游ゴシック", "Yu Gothic", "メイリオ",
+      "Hiragino Kaku Gothic ProN", "Hiragino Sans", sans-serif;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .pc_about_img,
+  .pc_menu_img,
+  .pc_gallery_items,
+  .pc_table {
+    display: none;
+  }
+
+  /* 共通部分 */
+
+  h2 img {
+    max-height: 45px;
+  }
+
+  .return img {
+    width: 100px;
+  }
+
+  /* ヘッダー */
+  h1 {
+    width: 187px;
+    margin: 13px;
+  }
+
+  .header_content {
+    margin: 41px auto 34px auto;
+  }
+
+  .header_content p:nth-child(1) {
+    font-size: 17px;
+  }
+
+  .header_content p:nth-child(2) {
+    font-size: 38px;
+    line-height: 1.1;
+    margin: 23px 0 13px 0;
+  }
+
+  .header_content p:nth-child(3) {
+    font-size: 16px;
+    line-height: 1.8;
+    max-width: 336px;
+    margin: 0 auto;
+  }
+
+  /* アバウト */
+  #about {
+    flex-direction: column;
+  }
+
+  .sp_about_img {
+    display: block;
+  }
+
+  .sp_about_img img {
+    width: 100%;
+  }
+
+  .about_content {
+    max-width: 100%;
+  }
+
+  #about h2 {
+    text-align: center;
+    margin: 54px auto 12px auto;
+  }
+
+  .about_content p {
+    width: 335px;
+  }
+
+  .about_content p:nth-of-type(1) {
+    font-size: 36px;
+    line-height: 1.2;
+    margin: 35px auto 19px auto;
+  }
+
+  .about_content p:nth-of-type(2) {
+    font-size: 16px;
+    line-height: 1.7;
+    text-align: justify;
+    margin: 0 auto;
+  }
+
+  /* メニュー */
+  #menu {
+    padding: 0px;
+  }
+
+  #menu h2 {
+    margin: 45px auto 18px auto;
+  }
+
+  .menu_items {
+    flex-direction: column;
+    align-items: center;
+    margin: 0 auto;
+    max-width: 300px;
+  }
+
+  .menu_item {
+    max-width: 100%;
+  }
+
+  .menu_item:nth-child(n + 2) {
+    margin-top: 13px;
+  }
+
+  .sp_menu_img {
+    display: block;
+  }
+
+  .sp_menu_img img {
+    border-radius: 0 41px 0 0;
+  }
+
+  h3 {
+    font-size: 40px;
+    top: 186px;
+  }
+
+  #menu p {
+    font-size: 17px;
+    line-height: 1.5;
+    height: 115px;
+    margin-top: 53px;
+  }
+
+  /* ギャラリー */
+  #gallery h2 {
+    margin: 42px auto 16px auto;
+  }
+
+  .sp_gallery_items {
+    display: block;
+  }
+
+  .sp_gallery_items img {
+    width: 100%;
+  }
+
+  /* イベント */
+  #event {
+    max-width: 335px;
+  }
+
+  td {
+    display: block;
+    width: 100%;
+  }
+
+  .sp_table {
+    display: block;
+    width: 291px;
+    margin: 0px auto;
+    border-spacing: 0px 27px;
+  }
+
+  .event_day {
+    padding: 0px;
+  }
+
+  /* アクセス */
+  #access h2 {
+    margin: 28px auto 4px auto;
+  }
+
+  iframe {
+    height: 191px;
+  }
+
+  /* フッター */
+  footer {
+    padding: 41px 0px 28px;
+  }
+
+  footer > div {
+    flex-direction: column;
+    gap: 28px;
+    margin: 0 auto;
+    width: 308px;
+  }
+
+  footer p {
+    font-size: 18px;
+    line-height: 1.7;
+  }
+
+  .footer_copy {
+    margin-top: 40px;
+  }
 }
