--- a/kadai_ideta_0328/css/style.css
+++ b/kadai_ideta_0328/css/style.css
@@ -112,7 +112,7 @@ body {
   font-size: 16px;
   line-height: 1.6;
   text-align: justify;
-  margin-top: 23px;
+  margin: 23px 10px 0 0;
 }
 
 /* メニュー */
@@ -167,6 +167,10 @@ h3 {
   display: flex;
 }
 
+.lb-data .lb-number {
+  display: none !important;
+}
+
 /* イベント */
 
 #event h2 {
@@ -177,6 +181,7 @@ h3 {
   max-width: 100%;
   border: 3px solid black;
   background: #fff;
+  margin: 0 10px;
 }
 
 .pc_table {
@@ -242,6 +247,59 @@ footer p {
 
 .return img {
   width: 125px;
+}
+
+/* スライダー */
+/* レスポンシブ部分を反映させるために、レスポンシブ前に記述する */
+.slick-dots {
+  bottom: 20px;
+}
+
+.slick-dots li.slick-active button:before,
+.slick-dots li button:before {
+  color: #fff;
+  /* 丸の大きさ */
+  font-size: 14px;
+}
+
+.slick-dotted.slick-slider {
+  margin-bottom: 0;
+}
+
+.slick-prev {
+  width: 25px;
+  height: 50px;
+  left: 20%;
+  z-index: 99;
+}
+
+.slick-next {
+  width: 25px;
+  height: 50px;
+  right: 20%;
+}
+
+/* 反映されない */
+/* #gallary .slick-next:before { */
+/* 反映はされるが、もとの矢印も下に残っている状態 */
+/* .slick-next { */
+.slick-next:before {
+  content: "";
+  display: block;
+  width: 27px;
+  height: 27px;
+  border-top: 5px solid #fff;
+  border-right: 5px solid #fff;
+  transform: rotate(45deg);
+}
+.slick-prev:before {
+  content: "";
+  display: block;
+  width: 27px;
+  height: 27px;
+  border-top: 5px solid #fff;
+  border-right: 5px solid #fff;
+  transform: rotate(225deg);
 }
 
 /* スマホ版メニュー */
@@ -540,5 +598,18 @@ footer p {
 
   .footer_copy {
     margin-top: 40px;
+  }
+
+  .slick-prev {
+    /* width: 25px; */
+    /* height: 50px; */
+    left: 5%;
+    /* z-index: 99; */
+  }
+
+  .slick-next {
+    /* width: 25px; */
+    /* height: 50px; */
+    right: 5%;
   }
 }
