--- a/portfolio_ideta/css/style.css
+++ b/portfolio_ideta/css/style.css
@@ -1,11 +1,17 @@
 @charset "UTF-8";
 
-/* 共通部分 */
+/* ーーー 共通部分 ーーー */
 
 body {
   width: 1366px;
   /* background-color: #fffcf5; */
-  background-color: #4f4f4f;
+  background-color: #919191;
+}
+
+/* works3つの基準が白四角になっていてずれている
+ボタンの上が400の上と揃う必要がある */
+.wrapper {
+  height: 400px;
 }
 
 .en {
@@ -16,21 +22,55 @@ body {
   letter-spacing: 0.2em;
 }
 
-/* 反映されない　</>の表示が出ないため
-グーグルフォントなら、
-Nothing You Could Do
-Oooh Baby
-のどちらかで*/
 .cursive {
   font-family: adventures-unlimited, sans-serif;
   font-style: normal;
   font-weight: 400;
+  color: #ec6c4e;
+  text-align: right;
 }
 
-/* works3つの基準が白四角になっていてずれている
-ボタンの上が400の上と揃う必要がある */
-.wrapper {
-  height: 400px;
+/* ボタン「もっと知りたい」 */
+
+.btn {
+  width: 120px;
+  height: 120px;
+  border-radius: 60px;
+  background: #fff;
+  border: 1px solid #53c711;
+  /* padding-top: 27px; */
+  position: relative;
+}
+
+.btn p:nth-of-type(1) {
+  text-align: center;
+  font-size: 13px;
+  line-height: 1.5;
+  padding-top: 20px;
+}
+
+/* 矢印の交差点のズレが気になる */
+/* ABOUTMEの部分だけどっかいく */
+.arrow_right {
+  width: 13px;
+  border-bottom: 1px solid #423732;
+  transform: rotate(45deg);
+  position: absolute;
+  top: 74px;
+  left: 75px;
+}
+
+.arrow_bottom {
+  width: 54px;
+  height: 20px;
+  border-bottom: 1px solid #423732;
+  margin: 0 auto;
+}
+
+.btn p:nth-of-type(2) {
+  text-align: center;
+  font-size: 8px;
+  margin-top: 8px;
 }
 
 /* FV・左右固定デザイン */
@@ -92,7 +132,6 @@ ul {
   font-size: 16px;
 }
 
-/* なんか雰囲気違う！丸ゴシックの方がいいかも！ */
 h1 {
   font-family: fot-tsukuardgothic-std, sans-serif;
   font-style: normal;
@@ -108,7 +147,12 @@ header > p {
   font-weight: 400;
   font-size: 22px;
   letter-spacing: 0.46em;
-  margin: 45px auto auto 724px;
+  margin: 8px auto auto 668px;
+}
+
+header img {
+  margin: 7px auto auto 114px;
+  /* margin-left: 114px; */
 }
 
 /* わたしのこと */
@@ -131,24 +175,18 @@ h2 {
   font-size: 20px;
   letter-spacing: 0.2em;
   writing-mode: vertical-rl;
-  /* margin: 36px auto auto 100px; */
   padding: 30px 16px 68px;
   border: 1px solid #ec6c4e;
 }
 
 .ttl p {
-  /* フォントが反映された場合
   font-size: 30px;
-  line-height: 0.6; */
-  line-height: 1;
+  line-height: 0.6;
+  letter-spacing: 0.12em;
   transform: rotate(-15deg);
-  /* Aboutme　以下で反映できる
-  Works・Contact　以下で画面右端に移動、
-  abusolute消すと表示したい周辺に戻る
-  同様のコピペだが .erase は以下で反映可 */
   position: absolute;
-  bottom: 28px;
-  right: -35px;
+  top: 189px;
+  left: 33px;
 }
 
 .erase {
@@ -167,12 +205,6 @@ h2 {
   top: 200px;
   left: -440px;
 }
-
-/* .about_content {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-} */
 
 .about_content div:nth-child(1) {
   position: absolute;
@@ -196,45 +228,6 @@ h2 {
   /* text-align: right; */
 }
 
-.btn {
-  width: 120px;
-  height: 120px;
-  border-radius: 60px;
-  background: #ec6c4e;
-  /* padding-top: 27px; */
-  position: relative;
-}
-
-.btn p:nth-of-type(1) {
-  text-align: center;
-  font-size: 13px;
-  line-height: 1.5;
-  padding-top: 20px;
-}
-
-/* 矢印の交差点のズレが気になる */
-.arrow_right {
-  width: 13px;
-  border-bottom: 1px solid #423732;
-  transform: rotate(45deg);
-  position: absolute;
-  top: 74px;
-  left: 75px;
-}
-
-.arrow_bottom {
-  width: 54px;
-  height: 20px;
-  border-bottom: 1px solid #423732;
-  margin: 0 auto;
-}
-
-.btn p:nth-of-type(2) {
-  text-align: center;
-  font-size: 8px;
-  margin-top: 8px;
-}
-
 /* つくったもの_共通 */
 
 .works_line {
@@ -245,10 +238,16 @@ h2 {
   left: -440px;
 }
 
+/* .works .wrapper {
+  padding-top: 71px;
+} */
+
 h3 {
   font-family: athelas, serif;
   font-style: normal;
   font-weight: 400;
+  font-size: 30px;
+  letter-spacing: 0.2em;
   text-align: right;
 }
 
@@ -258,13 +257,10 @@ h3 {
   width: 630px;
   height: 288px;
   background-color: #fff;
-  margin: 77px auto auto 129px;
+  margin: 71px auto auto 129px;
   position: relative;
   z-index: 10;
 }
-
-/* font-family反映されない　</>の表示が出ない
-AdobeフォントでWebプロジェクトに追加するボタンがない */
 
 .hp_square h3 {
   width: 285px;
@@ -306,7 +302,7 @@ AdobeフォントでWebプロジェクトに追加するボタンがない */
   width: 426px;
   position: absolute;
   top: 207px;
-  left: -200px;
+  left: -193px;
   border-bottom: solid 1px #ec6c4e;
   z-index: 200;
 }
@@ -343,7 +339,7 @@ AdobeフォントでWebプロジェクトに追加するボタンがない */
   width: 243px;
   position: absolute;
   top: 207px;
-  left: -121px;
+  left: -131px;
   border-bottom: solid 1px #ec6c4e;
   z-index: 300;
 }
@@ -353,7 +349,7 @@ AdobeフォントでWebプロジェクトに追加するボタンがない */
   /* height: 300px; */
   position: absolute;
   top: -27px;
-  left: 121px;
+  left: 101px;
 }
 
 .bn_square a {
@@ -362,7 +358,7 @@ AdobeフォントでWebプロジェクトに追加するボタンがない */
   height: 120px;
   position: relative;
   top: -70px;
-  right: -385px;
+  right: -369px;
 }
 
 /* CONTACT */
