--- a/portfolio_ideta/css/style.css
+++ b/portfolio_ideta/css/style.css
@@ -14,6 +14,11 @@ body {
   height: 400px;
 }
 
+.scroll_section {
+  width: 100vw;
+  height: 100%;
+}
+
 .en {
   font-family: din-2014, sans-serif;
   font-style: normal;
@@ -75,7 +80,7 @@ body {
 
 /* FV・左右固定デザイン */
 
-header div {
+.header div {
   display: flex;
   justify-content: space-between;
   z-index: 1000;
@@ -83,19 +88,19 @@ header div {
 
 /* 左固定デザイン */
 
-header div div:nth-child(1) {
+.header div div:nth-child(1) {
   width: 60px;
   height: 800px;
   background: #d6d6d6;
   position: fixed;
 }
 
-header div p {
+.header div p {
   writing-mode: vertical-rl;
   margin: 0 auto;
 }
 
-header span {
+.header span {
   color: #ec6c4e;
 }
 
@@ -104,7 +109,7 @@ header span {
 /* まずは横書きでリストを横並びにすると２段になる
 それを２段のまま縦にするのでnavに縦書きを適応する */
 
-header div div:nth-child(2) {
+.header div div:nth-child(2) {
   width: 90px;
   height: 800px;
   background: #d6d6d6;
@@ -141,7 +146,7 @@ h1 {
   margin: 104px auto auto 178px;
 }
 
-header > p {
+.header > p {
   font-family: din-2014, sans-serif;
   font-style: normal;
   font-weight: 400;
@@ -150,7 +155,7 @@ header > p {
   margin: 8px auto auto 668px;
 }
 
-header img {
+.header img {
   margin: 7px auto auto 114px;
   /* margin-left: 114px; */
 }
@@ -220,7 +225,7 @@ h2 {
   width: 396px;
 }
 
-.about_content div:nth-child(2) {
+.about_content > div:nth-child(2) {
   position: relative;
   top: 152px;
   left: 330px;
