--- a/portfolio_ideta/css/common.css
+++ b/portfolio_ideta/css/common.css
@@ -2,8 +2,14 @@
 
 body {
   /* width: 1366px; */
-  /* background-color: #fffcf5; */
-  background-color: #919191;
+  background-color: #fffcf5;
+  /* background-color: #919191; */
+}
+
+main > section:nth-of-type(1) {
+  background-image: url(../images/bg_1-80.jpg);
+  height: 100vh;
+  background-repeat: no-repeat;
 }
 
 /* works3つの基準が白四角になっていてずれている
@@ -14,7 +20,7 @@ body {
 }
 
 .scroll_section {
-  width: 100vw;
+  /* width: 100vw; */
   height: 100%;
 }
 
@@ -41,7 +47,7 @@ body {
 .portfolioname {
   width: 60px;
   height: 100vh;
-  background: #d6d6d6;
+  background: #fffcf5;
   position: fixed;
   top: 0px;
   left: 0px;
@@ -65,7 +71,7 @@ body {
 header {
   width: 90px;
   height: 100vh;
-  background: #d6d6d6;
+  background: #fffcf5;
   position: fixed;
   bottom: 0px;
   right: 0px;
