--- a/portfolio_ideta/css/style.css
+++ b/portfolio_ideta/css/style.css
@@ -76,7 +76,8 @@ h1 {
 /* ---------- わたしのこと ---------- */
 
 .about {
-  width: 560px;
+  width: 100vh;
+  /* width: 560px; */
   display: flex;
   justify-content: space-between;
   /* gap: 152px; */
@@ -95,6 +96,8 @@ h2 {
   font-size: 20px;
   letter-spacing: 0.2em;
   writing-mode: vertical-rl;
+  font-feature-settings: initial;
+
   padding: 30px 16px 68px;
   border: 1px solid #ec6c4e;
 }
@@ -185,6 +188,10 @@ h3 {
 
 /* ---------- WEBSITE ---------- */
 
+/* .hp {
+  width: 100vh;
+} */
+
 .hp_square {
   width: 630px;
   height: 288px;
@@ -220,6 +227,10 @@ h3 {
   right: -555px;
 }
 /* ---------- LANDINGPAGE ---------- */
+
+/* .lp {
+  width: 100vh;
+} */
 
 .lp_square {
   width: 427px;
