--- a/portfolio_ideta/css/works_hp_detail.css
+++ b/portfolio_ideta/css/works_hp_detail.css
@@ -1,25 +1,205 @@
 @charset "UTF-8";
 
-.ttl {
-  width: 502px;
+/* body {
+  background-image: url(../images/bg_1-80.jpg);
+  height: 100vh;
+  background-repeat: no-repeat;
+} */
+
+main > section:nth-of-type(1) {
+  background-image: url(../images/bg_1-80.jpg);
+  height: 100vh;
+  background-repeat: no-repeat;
+}
+
+/* .bg {
+  background-image: url(../images/bg-80.jpg);
+  width: 100vh;
+} */
+
+.top {
+  width: 700px;
+  /* width: 900px; */
+  margin-left: 150px;
+  display: flex;
+  height: 100%;
+  align-items: center;
+}
+
+.top .ttl {
+  width: 540px;
   height: 32px;
-  border-left: 4px solid #ec6c4e;
+  border-left: 5px solid #f2917e;
   display: flex;
   justify-content: space-between;
+  margin-bottom: 20px;
+  /* margin: auto auto 20px 56px; */
 }
 
 h1 {
   font-size: 18px;
+  margin-left: 10px;
 }
 
-p {
+.ttl p {
   font-size: 16px;
+  letter-spacing: 0.2em;
+  line-height: 2;
+  text-align: center;
+  width: 91px;
+  height: 32px;
+  border: 1px solid #f2917e;
+  border-radius: 16px;
 }
 
-.img {
-  width: 550px;
+img {
+  position: relative;
 }
 
-.img {
+.img_pc {
+  /* width: 600px; */
+  height: 348px;
+}
+
+.img_pc img {
+  /* width: 100%; */
+  height: 100%;
+}
+
+.img_sp {
   width: 128px;
+  position: absolute;
+  top: 346px;
+  left: 572px;
+}
+
+.img_sp img {
+  width: 100%;
+}
+
+.contents {
+  display: flex;
+  height: 100%;
+  align-items: center;
+  gap: 23px;
+  margin-right: 30px;
+}
+
+table {
+  border-spacing: 0px 20px;
+}
+
+th {
+  width: 104px;
+  background: #f2917e;
+  border: 1px solid #f2917e;
+}
+
+th p {
+  font-size: 15px;
+  line-height: 3;
+  color: #fffcf5;
+}
+
+td {
+  width: 390px;
+  border: 1px solid #f2917e;
+}
+
+td p {
+  font-size: 15px;
+  line-height: 3;
+  margin-left: 17px;
+}
+
+.point {
+  width: 677px;
+  height: 400px;
+  border: 1px solid #f2917e;
+  border-left: 11px solid #f2917e;
+  display: flex;
+  position: relative;
+}
+
+h2 {
+  font-size: 17px;
+  color: #f2917e;
+  position: absolute;
+  top: 15px;
+  left: 15px;
+}
+
+.point p {
+  font-size: 14px;
+  width: 290px;
+  height: 313px;
+  margin-top: 57px;
+  margin-left: 40px;
+}
+
+.allpage {
+  width: 4000px;
+  display: flex;
+  gap: 10px;
+}
+
+.allpage p {
+  writing-mode: vertical-rl;
+  font-feature-settings: initial;
+}
+
+.allpage div {
+  /* width: 360px; */
+  height: 100vh;
+}
+
+.allpage img {
+  width: 100%;
+  /* height: 100%; */
+}
+
+.allpage > div:nth-of-type(4),
+.allpage > div:nth-of-type(6) {
+  display: flex;
+  align-items: flex-end;
+}
+
+.allpage > div:nth-of-type(7),
+.allpage > div:nth-of-type(8),
+.allpage > div:nth-of-type(9) {
+  display: flex;
+  align-items: center;
+}
+
+a {
+  width: 120px;
+  height: 120px;
+  border-radius: 60px;
+}
+
+.btn {
+  width: 120px;
+  height: 120px;
+  border-radius: 60px;
+  border: 1px solid #423732;
+  /* position: relative; */
+}
+
+.btn p {
+  font-size: 14px;
+  letter-spacing: 0.2em;
+  text-align: center;
+  margin-top: 42px;
+  /* position: absolute;
+    top: 42px;
+    left: 19px; */
+}
+
+.btn img {
+  width: 26px;
+  display: block;
+  margin: 10px auto auto;
+  /* position: absolute;
+    top: 75px;
+    left: 48px; */
 }
