--- a/portfolio_ideta/css/common.css
+++ b/portfolio_ideta/css/common.css
@@ -15,6 +15,7 @@ main > section:nth-of-type(1) {
 /* works3つの基準が白四角になっていてずれている
   ボタンの上が400の上と揃う必要がある
   →あとで調整 */
+/* 縦幅もレスポンシブするなら50%vh？ */
 .wrapper {
   height: 400px;
 }
